[package]
name = "fractals"
version = "0.1.0"
authors = ["kujon <jakub.korzeniowski@vortexa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
num = "0.4.0"
piston = "0.52.0"
piston2d-graphics = "0.39.0"
piston_window = "0.117.0"
pistoncore-glutin_window = "0.68.0"
piston2d-opengl_graphics = "0.77.0"
rand = "0.8.3"
vecmath = "1.0.0"
